# dockcheck

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.dockcheck/: policy.yaml
.dockcheck/skills/analyze/: SKILL.md
.dockcheck/skills/deploy/: SKILL.md
.dockcheck/skills/notify/: SKILL.md
.dockcheck/skills/secret-audit/: SKILL.md
.dockcheck/skills/test/: SKILL.md
.dockcheck/skills/test-writer/: SKILL.md
.dockcheck/skills/verify/: SKILL.md
.github/workflows/: dockcheck.yml
action/: action.yml
examples/aws-lambda-hello/: template.yaml
examples/cf-worker-hello/: .gitignore  package.json  wrangler.toml
examples/docker-hello/: Dockerfile  package.json
examples/fly-hello/: fly.toml
examples/gcp-cloudrun-hello/: cloudbuild.yaml
examples/generic-hello/: package.json
examples/netlify-hello/: netlify.toml
examples/railway-hello/: railway.json
examples/render-hello/: render.yaml
src/dockcheck/: __init__.py  cli.py
tests/fixtures/: sample_policy.yaml
tests/integration/: test_init_e2e.py  test_pipeline_e2e.py
tests/smoke/: conftest.py  test_deploy_smoke.py
tests/unit/: test_action.py  test_audit.py  test_auth.py  test_cli_deploy.py  test_confidence.py  test_deploy_providers.py  test_detect.py  test_detect_lint.py  test_dispatch.py  test_docker.py  test_hardstop.py  test_notify.py  test_orchestrator.py  test_parallel.py  test_policy.py  test_preflight.py  test_providers.py  test_scaffold.py  test_secret_scanner.py  test_secrets.py  test_skill_loader.py  test_terraform.py  test_workflow_lint.py  test_workspace.py  test_workspace_cli.py
(+44 files in other folders)
